--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,14 @@
 name: Project Tests
 on:
-  push:
-    branches:
-      - main
   pull_request:
+    types:
+    - closed
     branches:
-      - main
+    - main
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
